[package]
name = "breakout"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"
description = "A simple game in rust and webassembly."
repository = "https://github.com/ciechowoj/breakout"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
strum = "^0.18.0"
strum_macros = "^0.18.0"
wasm-bindgen-futures = "0.4"
nalgebra-glm = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.51"
anyhow = "1.0"
http = { version = "^0.2" }
apilib = { path = "./apilib" }
hex = "^0.4.2"
rand = "^0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
console_error_panic_hook = "0.1"

[dependencies.js-sys]
version = "^0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'console',
  'Crypto',
  'Document',
  'Element',
  'Headers',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlElement',
  'HtmlHeadElement',
  'HtmlStyleElement',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Node',
  'Storage',
  'Window',
  'TouchEvent',
  'TouchList',
  'Touch',
]

[dependencies.wasm-bindgen]
version = "^0.2.65"
features = [
  'serde-serialize'
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
