[package]
name = "admin-reset"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = ">= 0.13.0"
rust-argon2 = ">= 0.8"
rand = ">= 0.7.3"
rand_chacha = ">= 0.2.2"
rand_core = ">= 0.5.1"
sha2 = ">= 0.9"