[package]
name = "api"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"

[dependencies]
rust-argon2 = ">= 0.8"
tokio = { version = "^0.2", features = ["rt-core", "sync", "macros"] }
tokio-postgres = { version = "^0.5", features = ["with-uuid-0_8", "with-chrono-0_4"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "1.0"
apilib = { path = "../apilib" }
simple-postgres = { path = "../simple-postgres" }
http = { version = "^0.2" }
hex = "^0.4.2"
sha2 = "^0.9.0"
base64 = "^0.12"
rand = "^0.7"
lazy_static = "^1.4.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'