[package]
name = "apilib"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
sha2 = "^0.9.0"
rand = "^0.7"
hex = "^0.4.2"