[package]
name = "simple-postgres"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpq = "^1.0.0"
serde = { version = ">= 1.0.117", features = ["derive"] }
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
chrono = { version = ">= 0.4", features = ["serde"] }
