[package]
name = "api"
version = "0.1.0"
authors = ["Wojciech Szęszoł <keepitsimplesirius@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "^0.2", features = ["rt-core", "macros"] }
tokio-postgres = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.51"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'